# cryo

./: CMakeLists.txt  README.md
doc/: Doxyfile  links.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Makefile  config.h.in  gboard.cpp  gboard.h  gplayer.cpp  gplayer.h  main.cpp
src/server/: CMakeLists.txt  config.h.in
